@@ -1,3 +1,8 @@
+2005-03-14  Mark McLoughlin  <mark@skynet.ie>
+
+	* admin-tool/userswindow.py: add cheesy UI which uses
+	userdb.py
+
 2005-03-14  Mark McLoughlin  <markmc@redhat.com>
 
 	* lib/userdb.py: add stub for DV to hack on.
